--- a/buildout.cfg
+++ b/buildout.cfg
@@ -44,6 +44,7 @@ use-zipimport = false
 # others or uncomment the extra lines to add those common packages.
 eggs =
     pyramid
+    cone.app
 #    babel
 #    gaepytz
 #    jinja2
