--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,7 @@
 [buildout]
+
+sdkversion = 1.7.2
+
 parts =
     gae_sdk
     gae_tools
@@ -22,7 +25,7 @@ include-site-packages = false
 [gae_sdk]
 # Dowloads and extracts the App Engine SDK.
 recipe = appfy.recipe.gae:sdk
-url = http://googleappengine.googlecode.com/files/google_appengine_1.7.2.zip
+url = http://googleappengine.googlecode.com/files/google_appengine_${buildout:sdkversion}.zip
 
 [gae_tools]
 # Installs appcfg, bulkload_client, bulkloader, dev_appserver, remote_api_shell
@@ -72,4 +75,3 @@ ignore-packages =
     easy_install
     site
     ssl
-#    pkg_resources
