lib dist creation at buildout time

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,6 +22,12 @@ include-site-packages = false
 # extensions = buildout.dumppickedversions
 # dump-picked-versions-file = versions.cfg
 
+[dirs]
+recipe = z3c.recipe.mkdir
+lib-directory = app/lib/dist
+paths = 
+    ${:lib-directory}
+
 [gae_sdk]
 # Dowloads and extracts the App Engine SDK.
 recipe = appfy.recipe.gae:sdk
@@ -35,12 +41,12 @@ recipe = appfy.recipe.gae:tools
 extra-paths =
     app
     app/lib
-    app/lib/dist
+    ${dirs:lib-directory}
 
 [app_lib]
 # Sets the library dependencies for the app.
 recipe = appfy.recipe.gae:app_lib
-lib-directory = app/lib/dist
+lib-directory = ${dirs:lib-directory}
 use-zipimport = false
 
 # Define the packages to download. Only tipfy is included, but you can add
