prepare for more complex example

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-parts
-bin
-eggs
-downloads
+/parts/
+/bin/
+/eggs/
+/downloads/
 *.egg-info
-develop-eggs
+/develop-eggs/
 .installed.cfg
 *.pyc
 *.pyo
-src/packages
 *~
 .pydevproject
 .project
@@ -15,8 +14,12 @@ var
 .DS_Store
 *#*
 .mr.developer.cfg
-devsrc
+/devsrc/
 docs/Makefile
 docs/make.bat
-/dist/
-/app/lib/
+/app/distlib/
+/app/
+/lib/
+/locals/
+/include/
+.settings
