--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,11 +1,22 @@
 [buildout]
-
-sdkversion = 1.7.5
-
 parts =
-    gae_sdk
-    gae_tools
+    dirs
     app_lib
+    testpy
+    appengine_sdk
+    appengine_tools
+    symlinks
+    babel
+    autotranslate
+
+# GAE Specific
+sdkversion = 1.8.4
+distlib-directory = ${buildout:directory}/app/distlib
+
+# own eggs here
+develop =
+    ${buildout:directory}/source/example_app
+
 
 # Generate relative paths for eggs so that the buildout can be moved around.
 relative-paths = true
@@ -18,52 +29,40 @@ extends = versions.cfg
 versions = versions
 include-site-packages = false
 
-# Enable this to save all picked versions in the versions.cfg file.
-# extensions = buildout.dumppickedversions
-# dump-picked-versions-file = versions.cfg
+# addons from git
+extensions = mr.developer
+sources = sources
+sources-dir = ${buildout:directory}/devsrc
+always-checkout = force
+auto-checkout = *
+
+
+[sources]
+collective.recipe.appengine = git git://github.com/jensens/collective.recipe.appengine.git push-url=git@github.com:jensens/collective.recipe.appengine.git
 
 [dirs]
 recipe = z3c.recipe.mkdir
-lib-directory = app/lib/dist
 paths = 
-    ${:lib-directory}
+    ${buildout:directory}/var
 
-[gae_sdk]
-# Dowloads and extracts the App Engine SDK.
-recipe = appfy.recipe.gae:sdk
-url = http://googleappengine.googlecode.com/files/google_appengine_${buildout:sdkversion}.zip
-
-[gae_tools]
-# Installs appcfg, bulkload_client, bulkloader, dev_appserver, remote_api_shell
-# and python executables in the bin directory.
-recipe = appfy.recipe.gae:tools
-# Add these paths to sys.path in the generated scripts.
-extra-paths =
-    app
-    app/lib
-    ${dirs:lib-directory}
 
 [app_lib]
 # Sets the library dependencies for the app.
-recipe = appfy.recipe.gae:app_lib
-lib-directory = ${dirs:lib-directory}
+recipe = collective.recipe.appengine:applib
+lib-directory = ${buildout:distlib-directory}
 use-zipimport = false
 
-# Define the packages to download. Only tipfy is included, but you can add
-# others or uncomment the extra lines to add those common packages.
 eggs =
+    pycrypto
+    Pillow
     pyramid
-#    babel
-#    gaepytz
-#    jinja2
-#    wtforms
+    zope.component
 
 # Don't copy files that match these glob patterns.
 ignore-globs =
     *.c
     *.pyc
     *.pyo
-    *.so
     */test
     */tests
     */testsuite
@@ -72,13 +71,81 @@ ignore-globs =
     */_zope_interface_coptimizations.py
     */_zope_i18nmessageid_message.py
     */_speedups.py
+    #*.so
 
 # Don't install these packages or modules.
 ignore-packages =
     distribute
-    PasteScript
     setuptools
     easy_install
+    PasteScript
     site
     ssl
-    webob
+    anykeystore
+    requests
+    ipdb
+
+
+[symlinks]
+recipe = collective.recipe.cmd
+on_install = true
+on_update  = true
+cmds =
+    ln -fs ${buildout:directory}/source/example_app/src/example_app ${buildout:directory}/app
+
+    
+[testpy]
+recipe = zc.recipe.testrunner
+eggs =
+    ${app_lib:eggs}
+    example_app[test]
+    
+extra-paths =
+    ${buildout:directory}/app
+    ${buildout:distlib-directory}
+    ${appengine_sdk:destination}
+    ${appengine_sdk:destination}/lib/antlr3
+    ${appengine_sdk:destination}/lib/simplejson
+    ${appengine_sdk:destination}/lib/fancy_urllib
+    ${appengine_sdk:destination}/lib/ipaddr
+    ${appengine_sdk:destination}/lib/yaml/lib
+    ${appengine_sdk:destination}/lib/webob-1.2.3
+
+defaults = ['--auto-color', '--auto-progress']    
+
+[babel]
+recipe = zc.recipe.egg
+eggs =
+    example_app
+    babel
+    lingua
+    
+extra-paths =
+    ${testpy:extra-paths}
+    
+interpreter = python-babel
+scripts = 
+    pybabel   
+
+[autotranslate]
+recipe = zc.recipe.egg:scripts
+eggs =  
+    lingua.autotranslate
+
+scripts = 
+    pybabel
+    
+[appengine_sdk]
+# Dowloads and extracts the App Engine SDK.
+recipe = collective.recipe.appengine:sdk
+url = http://googleappengine.googlecode.com/files/google_appengine_${buildout:sdkversion}.zip
+
+[appengine_tools]
+recipe = collective.recipe.appengine:tools
+# Add these paths to sys.path in the generated scripts.
+extra-paths =
+    app
+    ${buildout:distlib-directory}
+interpreter = python-gae
+    
+    
